change parameters of Google Analytics

--- a/app/templates/jade/templates/_google-analytics.jade
+++ b/app/templates/jade/templates/_google-analytics.jade
@@ -4,4 +4,4 @@
 - var domain = _matches && _matches[1];
 
 script.
-  !function(G,h,p,a,g,e){G.GoogleAnalyticsObject=a,G[a]||(G[a]=function(){(G[a].q=G[a].q||[]).push(arguments)}),G[a].l=+new Date,g=h.createElement(p),e=h.getElementsByTagName(p)[0],g.src="//www.google-analytics.com/analytics.js",e.parentNode.insertBefore(g,e)}(window,document,"script","ga"),ga("create","UA-#{ site.trackingID }","#{ domain }"),ga("send","pageview");
+  !function(y,e,o,m,a,n){y.GoogleAnalyticsObject=m,y[m]||(y[m]=function(){(y[m].q=y[m].q||[]).push(arguments)}),y[m].l=+new Date,a=e.createElement(o),n=e.getElementsByTagName(o)[0],a.src="//www.google-analytics.com/analytics.js",n.parentNode.insertBefore(a,n)}(this,document,"script","ga");ga("create","UA-#{ site.trackingID }","#{ domain }");ga("send","pageview");
