--- a/app/templates/jade/templates/layout.jade
+++ b/app/templates/jade/templates/layout.jade
@@ -1,6 +1,6 @@
 include _helpers
 
-doctype  5
+doctype
 html(lang='ja')
   head
     meta(charset='utf-8')
@@ -42,8 +42,9 @@ html(lang='ja')
     
     script(src='/js/modernizr.js?v=' + randStr())
     
-    //if lt IE 9
-      script(src='/js/vendor.ie.js')
+    |<!--[if lt IE 9]>
+    script(src='/js/vendor.ie.js')
+    |<![endif]-->
 
   body
     include _google-analytics
